--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,16 +1,16 @@
 # Project information
-site_name: REPO_NAME_OR_SITE_NAME
+site_name: TRANSFORMERS_NER_PROJECT
 # defeine TOC or order of website-
 nav:
   - Home: index.md
 
-site_author: Sunny Bhaveen Chandra
+site_author: Rajesh Thakur
 site_description: >-
   DESCRIPTION
 
 # Repository
-repo_name: c17hawke/REPO_NAME
-repo_url: https://github.com/c17hawke/REPO_NAME
+repo_name: RajeshThakur1/TRANSFORMERS_NER_PROJECT
+repo_url: https://github.com/RajeshThakur1/TRANSFORMERS_NER_PROJECT
 
 # Configuration
 theme:
